--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
           <div class="modal-form-checkbox">
             <input
               id="user-privacy"
-              class="modal-form-checkbox-input visually-hidden"
+              class="visually-hidden modal-form-checkbox-input"
               type="checkbox"
               value="true"
               name="user-privacy"
@@ -565,7 +565,7 @@
             <label class="modal-form-policy" for="user-privacy">
               <span class="modal-form-policy-priv">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-checkbox"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
