--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
           <div class="modal-form-checkbox">
             <input
               id="user-privacy"
-              class="visually-hidden modal-form-checkbox-input"
+              class="modal-form-checkbox-input visually-hidden"
               type="checkbox"
               value="true"
               name="user-privacy"
@@ -565,11 +565,11 @@
             <label class="modal-form-policy" for="user-privacy">
               <span class="modal-form-policy-priv">
                 <svg class="checkbox-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-check"></use>
+                  <use href="./images/icons.svg#icon-gal"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
-              <a class="modal-form-policy-priv-link" href="">Privacy Policy</a>
+              <a href="" class="modal-form-policy-priv-link">Privacy Policy</a>
             </label>
           </div>
           <button class="form-btn" type="submit">Send</button>
