--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
     </footer>
 
     <!-- Modal window  Section-order-->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close" type="button">
           <svg class="modal-close-icon" width="8" height="8">
